Changed about me page by adding pic and making it a card, finalized navbar, made cards for porfolio projects, still messing with contact page

--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,11 @@
     <!--bootstrap link-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    
 </head>
 <body>
+  <div style="background-image: url('assets/img/white-painted-wall.jpg');">
+  <!--navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Dylan Ambrose</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,12 +27,14 @@
         </div>
       </nav>
 
+      <!--contact from-->
+      <div class="container">
       <form>
-        <div class="row">
-          <div class="col">
+        <div class="row h-100">
+          <div class="col-lg-6">
             <input type="text" class="form-control" placeholder="First name">
           </div>
-          <div class="col">
+          <div class="col-lg-6">
             <input type="text" class="form-control" placeholder="Last name">
           </div>
         </div>
@@ -46,5 +51,7 @@
             </div>
         </div>
       </form>
+      </div>
+      </div>
 </body>
 </html>
