--- a/portfolio.html
+++ b/portfolio.html
@@ -24,32 +24,53 @@
           </div>
         </div>
       </nav>
-      <!--carousel-->
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/img/placeHolder1.jpg" class="d-block w-100" alt="Rock paper Scissors">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/img/placeHolder2.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/img/placeHolder3.jpg" class="d-block w-100" alt="...">
+      <!--cards-->
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+          <div class="card">
+            <img src="assets/img/placeHolder1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Hangman</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="assets/img/placeHolder2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Trivia Game</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="assets/img/placeHolder3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Rock Paper Scissors</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="assets/img/placeHolder4.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">RPG Game</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="assets/img/white-painted-wall.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Rutgers Info Widget</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
       </div>
 </body>
 </html>
